<resources>
    <string name="app_name"><color name="black">Finally home</color>
 </string>
    <string name="SwitchFaceId">Face ID</string>
    <string name="SwitchTouchId">Touch ID</string>
    <string name="nameTxt"><b>Name:</b></string>
    <string name="specialtyTxt"><b>Specialty:</b></string>
    <string name="zipcodeTxt"><b>Zipcode:</b></string>
    <string name="cityTxt"><b>City:</b></string>
    <string name="moreinfo"><b>More information:</b></string>
    <string name="disabilitytxt"><b>Disability friendly:</b></string>
    <string name="languagetxt"><b>Language:</b></string>
    <string name="phonetxt"><b>Phone number:</b></string>
    <string name="pricetxt"><b>Price:</b></string>
    <string name="educationtxt"><b>Education:</b></string>
    <string name="sextxt"><b>Sex:</b></string>
    <string name="insuranceTxt"><b>Health insurance covered:</b></string>

    <string name="backBtn">Back</string>
    <string name="descriptionTxt">Description:</string>
    <string name="title_txt">Title:</string>
    <string name="contactTxt">Contact:</string>
    <string name="place_txt">Meeting place:</string>

    <string name="login_btn">Sign in</string>
    <string name="wrong_pin">Wrong pin, try again.</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_chat">Chat</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_mood">Mood</string>
    <string name="list_btn_psych">List of psychologists</string>
    <string name="list_btn_group">List of supportgroups</string>
    <string name="btn_checklist">Checklist</string>
    <string name="btn_advice">Good advice</string>
    <string name="btn_babyweek">Baby this week</string>
    <string name="btn_settings">Settings</string>
    <string name="not_implemented">not implemented yet.</string>
    <string name="welcome">Welcome </string>
    <string name="bdateTxt">Birthdate: </string>
    <string name="signOutBtn">Sign out</string>
    <string name="faceId">Face ID</string>
    <string name="touchId">Touch ID</string>
    <string name="supportTxt">Support</string>
    <string name="areaBtn">Change area</string>
    <string name="childBtn">Change info about child</string>
    <string name="linkTxt">FAQ about the app:</string>
    <string name="supportContextTxt">Further questions?</string>
    <string name="faqLink"><a href="https://www.google.com/">FAQ</a></string>
    <string name="enterPin">Enter PIN</string>
    <string name="enterPinTxt">Enter PIN</string>
    <string name="saveBtn">Save</string>
    <string name="wishBtn">Wishes for the app? Contact us here:</string>
    <string name="wishButton">Wish button</string>

    <string name="saveDialog">You have already added mood today. Want to override?</string>
   <string name="alreadySavedMood">You have already added mood today.</string>
    <string name="saveMood">Save mood</string>
    <string name="cancel">Cancel</string>
    <string name="saveAnyway">Save anyway</string>
    <string name="signUpGroup">Sign up</string>
    <string name="moodSaved">Mood succesfully saved</string>
    <string name="moodHowTo">Here you can enter your mood for today. This can help giving an overview of the mood over a period.</string>
    <string name="createBtn">Create group</string>
    <string name="passwordBtn">Sign up or Forgot/change PIN</string>
    <string name="surelogOut">Sign out</string>
    <string name="logoutDialog">Sure you want to sign out?</string>
    <string name="moodOverviewBtn">Overview</string>
    <string name="goToLink">Open link</string>
   <string name="noDataArea">None in this area</string>
   <string name="spinnerDefault">Sort by area:</string>
    <string name="drawConsentBtn">Withdraw consent</string>
    <string name="changePinBtn">Change pin</string>
    <string name="cantgoback">Cannot go back</string>


</resources>