<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="dk.au.au339038.bachelorprojekt.endelighjemmeapp.FragmentsUI.calendar.CalendarFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/navigation_chat"
        android:name="dk.au.au339038.bachelorprojekt.endelighjemmeapp.FragmentsUI.chat.ChatFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat" />


    <fragment
        android:id="@+id/navigation_home"
        android:name="dk.au.au339038.bachelorprojekt.endelighjemmeapp.FragmentsUI.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />


    <fragment
        android:id="@+id/navigation_mood"
        android:name="dk.au.au339038.bachelorprojekt.endelighjemmeapp.FragmentsUI.mood.MoodFragment"
        android:label="@string/title_mood"
        tools:layout="@layout/mood_fragment" />




</navigation>