<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivitiesUI.settings.SettingsActivity">

    <ScrollView
        android:layout_width="411dp"
        android:layout_height="0dp"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginBottom="16dp"
        android:padding="2dp"
        app:layout_constraintBottom_toTopOf="@+id/signOut_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/areaBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/areaBtn" />

            <Switch
                android:id="@+id/faceId_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dip"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:text="@string/faceId" />

            <Switch
                android:id="@+id/touchIdSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dip"
                android:padding="4dp"
                android:text="@string/touchId" />

            <Button
                android:id="@+id/childBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/childBtn" />

            <Button
                android:id="@+id/supportBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/supportTxt" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/signOut_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/signOutBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>